fix visibility for intro, items, no results

--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ header h1 {
     background-color: #f8f9fa;
     color: #333;
 }
-.introduction-text {
+.introduction-text,
+.no-results-text {
     position: absolute;
     top: 45vh;
 }
